<resources>
    <plurals name="days">

        <item quantity="zero">%d Days</item>
        <item quantity="one">%d Day</item>
        <item quantity="other">%d Days</item>
    </plurals>
    <plurals name="rooms">
        <item quantity="zero">%d Rooms</item>
        <item quantity="one">%d Room</item>
        <item quantity="other">%d Rooms</item>
    </plurals>
    <plurals name="adults">
        <item quantity="zero">%d Adults</item>
        <item quantity="one">%d Adult</item>
        <item quantity="other">%d Adults</item>
    </plurals>
    <plurals name="children">
        <item quantity="zero">%d Children</item>
        <item quantity="one">%d Child</item>
        <item quantity="other">%d Children</item>
    </plurals>
    <plurals name="nights">
        <item quantity="zero">%d Nights</item>
        <item quantity="one">%d Night</item>
        <item quantity="other">%d Nights</item>
    </plurals>
    <plurals name="guests">
        <item quantity="zero">%d Guests</item>
        <item quantity="one">%d Guest</item>
        <item quantity="other">%d Guests</item>
    </plurals>
    <string name="app_name">Sky Premium</string>
    <string name="title_forgot_password">Please enter the email billing address associated with your
    account.
  </string>
    <string name="title_forgot_password_success">Check Your Email</string>
    <string name="body_forgot_password_success">A link has been sent to laurentanderson@mail.com.
    Please follow the instructions in the email to reset your password.
  </string>
    <string name="title_reset_password">Please enter your new password.</string>
    <string name="travel">Travel</string>
    <string name="wine"><![CDATA[Wine & Dine]]></string>
    <string name="home">Home</string>
    <string name="shopping">Shopping</string>
    <string name="wellness">Wellness</string>
    <string name="e_store">eStore</string>
    <string name="membership">Membership Services</string>
    <string name="travel_all_caps">TRAVEL</string>
    <string name="renewal_payment">Payment</string>
    <string name="wine_all_caps"><![CDATA[WINE & DINE]]></string>
    <string name="home_all_caps">HOME</string>
    <string name="shopping_all_caps">SHOPPING</string>
    <string name="wellness_all_caps">WELLNESS</string>
    <string name="flash_sales_all_caps">FLASH SALES</string>
    <string name="membership_all_caps">MEMBERSHIP SERVICES</string>
    <string name="sample_product_subtitle">Hotel - Italy</string>
    <string name="sample_product_title">Leone Blu</string>
    <string name="signing_in">Signing in…</string>
    <string name="sample_product_description">Birthday special: 20% off regular-priced shirt on
    birthday month (not applicable for Custom Grade shirts)
  </string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="description">Description</string>
    <string name="benefits_and_privileges"><![CDATA[Benefits & Privileges]]></string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="getting_user_detail">Getting user info..</string>
    <string name="updating_user_detail">Updating user info..</string>
    <string name="uploading_profile_image">Uploading profile image..</string>
    <string name="getting_favourite_lists">Getting Favourite Lists..</string>
    <string name="help">How can we help you?</string>
    <string name="contact_us">Alternatively, you can contact us at</string>
    <string name="profile">My Profile</string>
    <string name="faq">FAQ</string>
    <string name="notifications">Notifications</string>
    <string name="my_favourite">My Favourites</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="manage_credit_cards">Manage Credit Cards</string>
    <string name="manage_delivery_address">Manage Delivery Addresses</string>
    <string name="invite_friend">Invite a Friend</string>
    <string name="submitting">Submitting…</string>
    <string name="log_out">Logout</string>
    <string name="loading">Loading…</string>
    <string name="try_again">Try again</string>
    <string name="faq_empty">There is no FAQs available.</string>
    <string name="faq_not_found">No results found for \'%s\'.</string>
    <string name="faq_not_found_message">We couldn\'t find the FAQ you were looking for.\nTry
    searching again.
  </string>
    <string name="try_search">We couldn\'t find the product you were looking for.\nTry searching for
    another product instead.
  </string>
    <string name="membership_travel"><![CDATA[Travel Arrangements]]></string>
    <string name="membership_restaurants"><![CDATA[Restaurant Bookings & Reservations]]></string>
    <string name="membership_wellness"><![CDATA[Wellness Programs & Activities]]></string>
    <string name="membership_shopping">Shopping Recommendations</string>
    <string name="membership_enquiry">General Enquiry / Other Assistance</string>
    <string name="membership_technical">Technical Support</string>
    <string name="membership_fees">Membership Fees / Payment Matters</string>
    <string name="membership_feedbacks">Feedbacks / Suggestions</string>
    <string name="title_activity_maps">Map</string>
    <string name="label_partners">Partners</string>
    <string name="label_products">Products</string>
    <string name="message_loading_favourites">Fetching favourites…</string>
    <string name="title_noti_membership_renewal">Membership Renewal</string>
    <string name="title_added_to_cart">Added to Cart</string>
    <string name="txt_notice_membership_renewal">Your membership is expiring soon.</string>
    <string name="txt_notice_added_to_cart">\"Annual Membership Renewal\" has been added to your
    cart.
  </string>
    <string name="txt_notice_added_to_cartdisable">\"Annual Membership Renewal\" has been disabled.
  </string>
    <string name="txt_que_membership_renewal">Your membership will be expiring on %1$s. Would
    you like to renew your membership now?
  </string>
    <string name="txt_que_membership_renewalcode">Your membership will be expiring on %1$s.
  </string>
    <string name="txt_added_to_cart_description">You may utilize S$ %1$s from your current SKY DOLLAR(S) (S$ %2$s) to renew your membership for another year. Would you like to checkout now?
  </string>
    <string name="txt_donnot_show">Do not show this message again</string>
    <string name="txt_que_checkout">Would you like to checkout now?</string>
    <string name="btn_renewal_membership">Renew my annual membership</string>
    <string name="btn_renew_later">Renew Later</string>
    <string name="btn_use_loyalty">Yes, proceed to checkout. Use my SKY DOLLAR(S) to renew</string>
    <string name="btn_keey_loyalty">Yes, proceed to checkout. Keep my SKY DOLLAR(S)</string>
    <string name="btn_checkout_later">No, I will check out later</string>
    <string name="btn_checkout_now">yes, check out now</string>
    <string name="checkout">Check Out</string>
    <string name="txt_subtotal">subtotal</string>
    <string name="total_amount">S$1,160</string>
    <string name="hint_promocode">Promo Code</string>
    <string name="promo_amount">S$100</string>
    <string name="hint_loyalty">Sky Dollar Earned</string>
    <string name="hint_loyalty_sky_earn">Sky Dollar Earn</string>
    <string name="hint_loyalty_sky_to_earn">Sky Dollar To Earn</string>
    <string name="hint_loyalty_sky_dollars">Sky Dollar</string>
    <string name="hint_loyalty_sky_dollars_redeem">Sky Dollar to redeem</string>
    <string name="hint_loyalty_sky_dollars_redeemed">Sky Dollar redeemed</string>
    <string name="hint_loyalty_sky_earned">Sky Dollar Earned</string>
    <string name="apply">apply</string>
    <string name="dummy_promocode">Happy Monday</string>
    <string name="toolbarShoppinCart">My Shopping Cart</string>
    <string name="txt_btn_redeem">redeem</string>
    <string name="txt_redeem_loyalty_points">Redeem Sky Dollar</string>
    <string name="txt_redeem">you can redeem up to</string>
    <string name="txt_reduce_loyalty_money">S$282</string>
    <string name="txt_reduce_loyalty_points">(1,412</string>
    <string name="txt_grand_total">grand total</string>
    <string name="txt_qty">qty</string>
    <string name="txt_no_loyalty_point">You have no sky dollar to redeem.</string>
    <string name="txt_continue_shopping">Continue shopping</string>
    <string name="txt_no_product">You have nothing in your cart.</string>
    <string name="notice_body_favourite_no_item">Like something you see?\n Save them here to your
    favourites.
  </string>
    <string name="notice_title_favourite_no_item">You have no favourites yet.</string>
    <string name="review">review</string>
    <string name="edit_review_underline">edit review</string>
    <string name="btn_next">next</string>
    <string name="btn_checkout">check out</string>
    <string name="btn_done">done</string>
    <string name="txt_delivery_and_payment">Delivery &amp; \n payment</string>
    <string name="txt_review">review</string>
    <string name="txt_order_placed">order\nplaced</string>
    <string name="title_choose_delivery_address">Select Your Delivery Address</string>
    <string name="title_choose_credit_card">Select Your Credit Card</string>
    <string name="txt_person_name_address">Laurent Anderson</string>
    <string name="txt_edit">edit</string>
    <string name="txt_print">print</string>
    <string name="txt_cancelbookingbutton">Cancel This Booking</string>
    <string name="txt_address">Blk 123, Ang Mo Kia Ave 10 \n Singapore 512412</string>
    <string name="txt_visa_number">XXXX XXXX XXXX</string>
    <string name="date">01 / 2020</string>
    <string name="txt_renew_membership">renew my annual membership</string>
    <string name="txt_amt_shopping_cart">(3)</string>
    <string name="txt_title_delivery_address">delivery address</string>
    <string name="txt_title_billing_address">billing address</string>
    <string name="txt_title_delivery">delivery &amp; billing</string>
    <string name="txt_delivery_phone">+65 9123 4567</string>
    <string name="txt_title_payment_detail">payment details</string>
    <string name="txt_title_loyalty">loyalty points</string>
    <string name="txt_shipping_fee">shipping fees</string>
    <string name="txt_delivery_fee">delivery fee</string>
    <string name="txt_amt_promocode">-S$100</string>
    <string name="txt_amt_loyalty">-S$40(120 points)</string>
    <string name="txt_add_delivery_addresss">Add Delivery Address</string>
    <string name="mandatory">Mandatory</string>
    <string name="first_name">First Name *</string>
    <string name="last_name">Last Name *</string>
    <string name="postal_code">Zip / Postal code *</string>
    <string name="title_address">Street Address *</string>
    <string name="save">save</string>
    <string name="txt_set_primary">Set as Primary Address</string>
    <string name="unit_number">Unit Number *</string>
    <string name="city">City *</string>
    <string name="state">State / Province</string>
    <string name="country">Country *</string>
    <string name="guest_detail_salutation_label">Salutation *</string>
    <string name="guest_detail_first_name_label">Guest First Name *</string>
    <string name="guest_detail_last_name_label">Guest Last Name *</string>
    <string name="all_mobile_number_label">Contact Number *</string>
    <string name="guest_detail_smoking_checkbox">Smoking Room</string>
    <string name="guest_detail_special_request_label">Special Request</string>
    <string name="guest_detail_special_request_hint">Optional (250 characters max)</string>
    <string name="guest_detail_special_request_notice">Special / accessibility requests are not guaranteed and may incur additional charges.</string>
    <string name="billing_address_company_hint">Company</string>
    <string name="all_country_code_error">Required</string>
</resources>