<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="@drawable/rectangle_top_round_white">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:ignore="MissingPrefix"
      >

    <FrameLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_padding"
        >

      <TextView
          android:id="@+id/title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/triple_padding"
          android:gravity="center_horizontal|center_vertical"
          android:text="@string/txt_add_delivery_addresss"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:textColor="@color/textColorPrimary"
          fontPath="@string/fonts_Adobe_Garamond_Pro_Regular"
          />

      <ImageView
          android:id="@+id/img_close"
          android:layout_width="30dp"
          android:layout_height="25dp"
          android:layout_gravity="right|center_vertical"
          android:paddingBottom="7dp"
          android:paddingLeft="7dp"
          android:paddingTop="7dp"
          android:src="@drawable/ic_close_accent"
          />

    </FrameLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/layout_title"
        android:layout_marginBottom="@dimen/normal_padding"
        android:background="@color/lightGrey"
        />

    <TextView
        android:id="@+id/sign_of_mandatory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginLeft="@dimen/normal_padding"
        android:text="*"
        android:textColor="@color/colorAccent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginLeft="@dimen/extra_small_padding"
        android:layout_marginRight="@dimen/normal_padding"
        android:layout_toRightOf="@+id/sign_of_mandatory"
        android:text="@string/mandatory"
        android:textColor="@color/textColorPrimary"
        fontPath="@string/fonts_Lato_Regular"
        style="@style/TextAppearance.AppCompat.Caption"
        />

    <RelativeLayout
        android:id="@+id/ly_salutation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_of_mandatory"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"
        >

      <com.skypremiuminternational.app.app.view.SkyTextInputSignLayout
          android:id="@+id/input_salutation"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableRight="@drawable/ic_chevron_right_accent"
          android:hint="@string/guest_detail_salutation_label"
          android:inputType="none"
          tools:text="Singaporean"
          />

      <View
          android:id="@+id/v_salutation"
          android:layout_width="match_parent"
          android:layout_height="56dp"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ly_salutation"
        android:orientation="horizontal"
        android:padding="@dimen/normal_padding"
        >

      <com.skypremiuminternational.app.app.view.SkyTextInputSignLayout
          android:id="@+id/input_first_name"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/extra_small_padding"
          android:layout_weight="1"
          android:hint="@string/first_name"
          android:imeOptions="actionNext"
          android:inputType="text"
          tools:text="test1234"
          />

      <com.skypremiuminternational.app.app.view.SkyTextInputSignLayout
          android:id="@+id/input_last_name"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/extra_small_padding"
          android:layout_weight="1"
          android:hint="@string/last_name"
          android:imeOptions="actionNext"
          android:inputType="text"
          tools:text="test1234"
          />

    </LinearLayout>

    <com.skypremiuminternational.app.app.view.SkyTextInputWithoutSignLayout
        android:id="@+id/input_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_name"
        android:layout_marginBottom="@dimen/normal_padding"
        android:hint="@string/billing_address_company_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"
        tools:text="test1234"
        />
    <com.skypremiuminternational.app.app.view.SkyTextInputSignLayout
        android:id="@+id/input_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_company"
        android:layout_marginBottom="@dimen/normal_padding"
        android:hint="@string/all_mobile_number_label"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"
        tools:text="test1234"
        />

    <com.skypremiuminternational.app.app.view.SkyTextInputSignLayout
        android:id="@+id/input_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_phone_number"
        android:layout_marginBottom="@dimen/normal_padding"
        android:hint="@string/title_address"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"
        tools:text="test1234"
        />

    <LinearLayout
        android:id="@+id/layout_postcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_address"
        android:layout_marginBottom="@dimen/normal_padding"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"
        >

      <com.skypremiuminternational.app.app.view.SkyTextInputSignLayout
          android:id="@+id/input_unit_number"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/extra_small_padding"
          android:layout_weight="1"
          android:hint="@string/unit_number"
          android:imeOptions="actionNext"
          android:inputType="text"
          />

      <com.skypremiuminternational.app.app.view.SkyTextInputSignLayout
          android:id="@+id/input_post_code"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/extra_small_padding"
          android:layout_weight="1"
          android:hint="@string/postal_code"
          android:imeOptions="actionNext"
          android:inputType="number"
          android:nextFocusDown="@+id/input_city"
          tools:text="test1234"
          />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_address_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_postcode"
        android:layout_marginBottom="@dimen/normal_padding"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"
        >

      <com.skypremiuminternational.app.app.view.SkyTextInputSignLayout
          android:id="@+id/input_city"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/extra_small_padding"
          android:layout_weight="1"
          android:hint="@string/city"
          android:imeOptions="actionNext"
          android:inputType="text"
          android:nextFocusDown="@+id/input_state"
          tools:text="test1234"
          />

      <com.skypremiuminternational.app.app.features.skytextinputlayout.SkyTextInputLayout
          android:id="@+id/input_state"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/extra_small_padding"
          android:layout_weight="1"
          android:hint="@string/state"
          android:inputType="text"
          android:imeOptions="actionDone"
          tools:text="test1234"
          />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_address_details"
        android:layout_marginBottom="@dimen/normal_padding"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"
        >

      <com.skypremiuminternational.app.app.view.SkyTextInputSignLayout
          android:id="@+id/input_country"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableRight="@drawable/ic_chevron_right_accent"
          android:hint="@string/country"
          android:inputType="text"
          tools:text="Singaporean"
          />

      <View
          android:id="@+id/vCountry"
          android:layout_width="match_parent"
          android:layout_height="56dp"
          />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/layout_checkbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/rlCountry"
      android:layout_marginBottom="16dp"
      android:layout_marginLeft="@dimen/normal_padding"
      android:layout_marginRight="@dimen/normal_padding"
      >

      <ImageView
        android:id="@+id/img_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="@dimen/extra_small_padding"
        android:layout_marginRight="@dimen/normal_padding"
        android:src="@drawable/ic_circle"
        />

      <TextView
        android:id="@+id/txt_set_primary_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:layout_constraintStart_toEndOf="@id/img_checkbox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="@dimen/normal_padding"
        android:text="@string/txt_set_primary"
        android:textColor="@color/textColorPrimary"
        fontPath="@string/fonts_Lato_Regular"
        style="@style/TextAppearance.AppCompat.Small"
        />

      <ImageView
        android:id="@+id/img_garbage"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/small_padding"
        android:src="@drawable/ic_garbage"
        android:visibility="visible"
        />
      <FrameLayout
        android:id="@+id/layout_disable_checked"
        android:layout_width="0dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_garbage"
        android:background="@color/whiteTransparent"
        android:visibility="gone"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_below="@+id/layout_checkbox"
        android:letterSpacing="0.2"
        android:text="@string/save"
        style="@style/ButtonStyle"
        />

  </RelativeLayout>

</androidx.core.widget.NestedScrollView>