<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_normal"
    android:orientation="vertical"
    >

  <TextView
      android:id="@+id/tv_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin_normal"
      android:paddingLeft="@dimen/margin_normal"
      android:paddingRight="@dimen/margin_normal"
      android:textColor="@color/textColorPrimary"
      fontPath="@string/fonts_Lato_Heavy"
      tools:ignore="MissingPrefix"
      tools:text="Room #1: 1 Adult + 1 Child"
      />

  <RelativeLayout
      android:id="@+id/layout_credit_card_type"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:paddingLeft="@dimen/normal_padding"
      android:paddingRight="@dimen/normal_padding"
      >

    <com.skypremiuminternational.app.app.view.SkyTextInputSignLayout
        android:id="@+id/edt_salutation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/guest_detail_salutation_label"
        android:inputType="none"
        tools:text="test1234"
        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_small"
        android:paddingLeft="@dimen/small_padding"
        android:paddingRight="@dimen/small_padding"
        android:src="@drawable/ic_dropdown_accent"
        />

    <View
        android:id="@+id/salutation_overlay"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        />

  </RelativeLayout>


  <com.skypremiuminternational.app.app.view.SkyTextInputSignLayout
      android:id="@+id/edt_first_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/margin_normal"
      android:layout_marginStart="@dimen/margin_normal"
      android:layout_marginTop="@dimen/margin_normal"
      android:hint="@string/guest_detail_first_name_label"
      android:inputType="text"
      android:maxLength="50"
      />


  <com.skypremiuminternational.app.app.view.SkyTextInputSignLayout
      android:id="@+id/edt_last_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/margin_normal"
      android:layout_marginStart="@dimen/margin_normal"
      android:layout_marginTop="@dimen/margin_normal"
      android:hint="@string/guest_detail_last_name_label"
      android:inputType="text"
      android:maxLength="50"
      />

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/margin_normal"
      android:layout_marginStart="@dimen/margin_normal"
      android:layout_marginTop="@dimen/margin_normal"
      >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_phone_code_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:letterSpacing="0.1"
        android:text="@string/all_country_code_error"
        android:textAllCaps="true"
        android:textColor="@color/wineRed"
        android:textSize="8sp"
        android:visibility="invisible"
        fontPath="@string/fonts_Lato_Bold"
        style="@style/TextAppearance.AppCompat.Caption"
        />

    <TextView
        android:id="@+id/tv_phone_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="8dp"
        android:drawablePadding="16dp"
        android:drawableRight="@drawable/ic_dropdown_accent"
        android:gravity="center_vertical"
        tools:text="+65"
        style="@style/TextAppearance.AppCompat.Body1"
        />

    <View
        android:id="@+id/vertical_line"
        android:layout_width="1px"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/tv_phone_code"
        android:background="@color/lightGrey"
        />

    <com.skypremiuminternational.app.app.view.SkyTextInputWithouLineLayout
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_toEndOf="@+id/vertical_line"
        android:hint="@string/all_mobile_number_label"
        android:inputType="phone"
        />

  </RelativeLayout>

  <View
      android:layout_width="match_parent"
      android:layout_height="0.3sp"
      android:layout_marginEnd="@dimen/margin_normal"
      android:layout_marginStart="@dimen/margin_normal"
      android:layout_marginTop="@dimen/margin_small"
      android:background="@color/greyTransparent"
      />

  <CheckBox
      android:id="@+id/cb_smoking"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="@dimen/margin_normal"
      android:buttonTint="@color/grey"
      android:text="@string/guest_detail_smoking_checkbox"
      android:textSize="@dimen/text_size_normal"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/margin_normal"
      android:layout_marginStart="@dimen/margin_normal"
      android:layout_marginTop="@dimen/margin_small"
      android:letterSpacing="0.1"
      android:text="@string/guest_detail_special_request_label"
      android:textAllCaps="true"
      android:textColor="@color/orchid"
      android:textSize="8sp"
      fontPath="@string/fonts_Lato_Bold"
      tools:ignore="MissingPrefix"
      style="@style/TextAppearance.AppCompat.Caption"
      />

  <EditText
      android:id="@+id/edt_special_request"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/margin_normal"
      android:layout_marginStart="@dimen/margin_normal"
      android:layout_marginTop="@dimen/margin_small"
      android:background="#FFFFFF"
      android:gravity="top"
      android:hint="@string/guest_detail_special_request_hint"
      android:imeOptions="actionDone"
      android:lines="4"
      android:maxLength="250"
      android:padding="@dimen/margin_small"
      tools:targetApi="lollipop"
      style="@style/TextAppearance.AppCompat.Body1"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawableLeft="@drawable/ic_error_accent_16dp"
      android:drawablePadding="@dimen/margin_small"
      android:paddingBottom="@dimen/margin_normal"
      android:paddingLeft="@dimen/margin_normal"
      android:paddingRight="@dimen/margin_normal"
      android:paddingTop="@dimen/margin_small"
      android:text="@string/guest_detail_special_request_notice"
      android:textSize="@dimen/text_size_small"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:layout_marginLeft="@dimen/margin_normal"
      android:layout_marginRight="@dimen/margin_normal"
      android:background="@color/lightGrey"
      />
</LinearLayout>